# wasi-nn-training

./: .gitignore  .gitmodules  Cargo.toml  README.md
cifar/: Cargo.toml
cifar/src/: main.rs
jit-train/: Cargo.toml
multi-tensors/: Cargo.toml
multi-tensors/src/: main.rs
run-tch/: Cargo.toml
tch-backend-plugin/: Cargo.toml
tch-backend-plugin/src/: lib.rs
tensor-conversion/: Cargo.toml
tensor-conversion/src/: main.rs
test-tch-backend/: Cargo.toml
test-tch-backend/src/: main.rs
