[package]
name = "test-tch-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
byteorder = "1.4.3"
mnist = {version = "0.5.0"}
walkdir = "2.3.2"
num-traits = "0.2"
num-derive = "0.3"
num = "0.4.0"